--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="border">
         <div class="hud">
-            <div class="bomb-left-counter">888</div>
+            <div class="bomb-left-background">888<span class = "bomb-left-counter">000</span></div>
             <button class = "face-button"><img class = "face-image" src="img/smiling face.png" alt=""></button>
-            <div class="time-taken">888</div>
+            <div class="time-taken-background">888<span class = "time-taken-counter">000</span></div>
         </div>
         <div class="board"></div>
     </div>
+    <script src="minesweeper.js"></script>
 </body>
 </html>
